<resources>
    <string name="app_name">LpsEnterPrise</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login_account">输入用户名</string>
    <string name="login_psw">输入密码</string>
    <string name="login_inputcode">输入验证码</string>
    <string name="login_rememberpsw">记住密码</string>
    <string name="login">登录</string>
    <string name="action_settings">消息</string>
    <string name="netloading_str">正在加载中......</string>
    <string name="loading_dialog_str">加载中......</string>
    <string name="life_zwsj">暂无数据</string>
    <string name="life_empty">空的空的......</string>
    <string name="zwwl">加载失败，请点击重新加载</string>
    <string name="again_reload">重新加载</string>
    <string name="out_login_str">退出</string>
    <string name="left_account_name_str">String_Name</string>
    <string name="qita_str">其它</string>
    <string name="left_change_psw_str">修改密码</string>
    <string name="left_feedback_str">意见反馈</string>
    <string name="about_str">关于我们</string>
    <string name="main_toolbar_jk_str">监控</string>
    <string name="main_toolbar_gj_str">轨迹</string>
    <string name="main_toolbar_sp_str">视频</string>
    <string name="fg_monitor_search_str">输入车牌号搜索</string>
    <string name="login_logo_str">车辆管理 高效省心</string>
    <string name="go_score_str">去评分</string>
    <string name="update_function_str">更新功能</string>
    <string name="complaint_str">投诉</string>
    <string name="all_choose_str">全选</string>
    <string name="single_choose_str">删除</string>

</resources>
