<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:background="@color/gray0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:contentDescription="@null"
            android:src="@drawable/toux" />

        <TextView
            android:id="@+id/left_tv_account_name"
            style="@style/ty_style_textview"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:text="@string/left_account_name_str" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:orientation="vertical">

        <TextView
            android:id="@+id/left_changepsw_tv"
            style="@style/left_tv_style_textview"
            android:drawableLeft="@drawable/xgmm"
            android:text="@string/left_change_psw_str" />

        <TextView
            android:id="@+id/left_feedback_tv"
            style="@style/left_tv_style_textview"
            android:drawableLeft="@drawable/yjfk"
            android:text="@string/left_feedback_str" />

        <TextView
            android:id="@+id/left_about_mes_tv"
            style="@style/left_tv_style_textview"
            android:drawableLeft="@drawable/gywm"
            android:text="@string/about_str" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/left_out_login_tv"
            style="@style/left_tv_style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/dp_50"
            android:drawableTop="@drawable/tuic"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/out_login_str" />
    </FrameLayout>

</LinearLayout>