<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/login_top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_80"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/login_linearlayout"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/account_image"
                style="@style/login_imageview"
                android:contentDescription="@null"
                android:src="@drawable/login_account_icon" />

            <ImageView
                android:id="@+id/account_qchu"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:padding="12dp"
                android:src="@drawable/qchu"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/login_account_ed"
                style="@style/login_edittext"
                android:layout_toLeftOf="@id/account_qchu"
                android:layout_toRightOf="@id/account_image"
                android:hint="@string/login_account"
                android:maxLength="40" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/login_linearlayout"
            android:layout_marginTop="@dimen/dp_15">

            <ImageView
                android:id="@+id/pas_image"
                style="@style/login_imageview"
                android:contentDescription="@null"
                android:src="@drawable/login_psw_icon" />

            <ImageView
                android:id="@+id/password_qchu"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:padding="12dp"
                android:src="@drawable/qchu"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/login_psw_ed"
                style="@style/login_edittext"
                android:layout_toLeftOf="@id/password_qchu"
                android:layout_toRightOf="@id/pas_image"
                android:hint="@string/login_psw"
                android:inputType="textPassword"
                android:maxLength="20" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/remember_psw_cb"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_10"
            android:checked="true"
            android:text="@string/login_rememberpsw"
            android:textColor="@color/login_account_psw_edit_hint_color"
            android:textSize="@dimen/sp_13" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>
</LinearLayout>