<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/radio_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RadioGroup
            android:id="@+id/main_fg_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/monitor_radiobtn"
                android:layout_width="@dimen/dp_45"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:text="@string/main_toolbar_jk_str"
                android:textColor="@color/toolbar_radiobtn_color"
                android:textSize="@dimen/sp_15" />

            <RadioButton
                android:id="@+id/trajectory_radiobtn"
                android:layout_width="@dimen/dp_45"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:text="@string/main_toolbar_gj_str"
                android:textColor="@color/toolbar_radiobtn_color"
                android:textSize="@dimen/sp_15" />

            <RadioButton
                android:id="@+id/video_radiobtn"
                android:layout_width="@dimen/dp_45"
                android:layout_height="match_parent"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:text="@string/main_toolbar_sp_str"
                android:textColor="@color/toolbar_radiobtn_color"
                android:textSize="@dimen/sp_15" />
        </RadioGroup>
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/radio_main_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <include layout="@layout/radio__main_content_main" />

        <include layout="@layout/left_flylayout" />

    </android.support.v4.widget.DrawerLayout>
</LinearLayout>
