<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/all_layout_bg_color"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@mipmap/about_logo" />

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="工程车企业端v1.0.1"
            android:textColor="@color/app_all_tv_black_color"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/all_layout_bg_color"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/go_score_relative"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/white_bg_press_gray0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/go_score_str"
                android:textColor="@color/app_all_tv_black_color"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/about_right_icon"
                android:gravity="center_vertical" />
        </RelativeLayout>

        <View style="@style/line_gray0_m_width_h05_style" />

        <RelativeLayout
            android:id="@+id/update_function_relative"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/white_bg_press_gray0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/update_function_str"
                android:textColor="@color/app_all_tv_black_color"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/about_right_icon"
                android:gravity="center_vertical" />
        </RelativeLayout>

        <View style="@style/line_gray0_m_width_h05_style" />

        <RelativeLayout
            android:id="@+id/complaint_relative"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/white_bg_press_gray0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/complaint_str"
                android:textColor="@color/app_all_tv_black_color"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/about_right_icon"
                android:gravity="center_vertical" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>